--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo de Miniaturas</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        canvas {
-            border: 1px solid black;
-        }
-        #moveButton, #attackButton {
-            display: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jogo de Miniaturas</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
+      overflow-y: hidden;
+    }
+
+    canvas {
+      margin: 0;
+      padding: 0;
+    }
+
+    #moveButton,
+    #attackButton {
+      display: none;
+      position: relative;
+      top: -100px;
+    }
+  </style>
 </head>
+
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <button id="moveButton">Mover</button>
-    <button id="attackButton">Atacar</button>
-    <script src="game.js"></script>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <button id="moveButton">Mover</button>
+  <button id="attackButton">Atacar</button>
+  <script src="game.js"></script>
 </body>
+
 </html>
