--- a/index.html
+++ b/index.html
@@ -10,31 +10,43 @@
     body {
       font-family: Arial, sans-serif;
       width: 100%;
-      height: 100%;
+      min-height: 100vh;
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
-      overflow-y: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
 
     canvas {
       margin: 0;
       padding: 0;
+      border: 1px solid black;
+      /* Adicionei uma borda para facilitar a visualização */
+    }
+
+    #buttonContainer {
+      display: flex;
+      height: 30px;
+      /* Espaço entre o canvas e os botões */
     }
 
     #moveButton,
     #attackButton {
       display: none;
-      position: relative;
-      top: -100px;
+      margin: 5px 5px;
+      /* Espaçamento horizontal entre os botões */
     }
   </style>
 </head>
 
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
-  <button id="moveButton">Mover</button>
-  <button id="attackButton">Atacar</button>
+  <div id="buttonContainer">
+    <button id="moveButton">Mover</button>
+    <button id="attackButton">Atacar</button>
+  </div>
   <script src="game.js"></script>
 </body>
 
